# pdf-to-english-py

./: .gitignore  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  requirements.txt  run.py
.claude/: CLAUDE.md  settings.json
.claude/skills/pdf-investigate/: SKILL.md
scripts/: hello.py  investigate_ocr.py  pipeline_timing.py  translate_pdf.py
src/pdf_to_english_py/: app.py  ocr.py  render.py  theme.py  translate.py  validate.py
tests/: conftest.py  test_app.py  test_e2e.py  test_ocr.py  test_play.py  test_render.py  test_theme.py  test_translate.py  test_validate.py
x_docs/: SPEC.md  deploy_options.md  docs_mistral_ocr.md  gradio-llms-txt.md  handover_1.md  handover_2.md  mistral_ocr3.md  plan_prototype_py.md  prompt_viz_fidelity.md
x_docs/gradio/: example.md  four-kinds-of-interfaces.md  themes.md
x_docs/ui-prototype/: prototype.html
